# llm-storyline-game

./: .env.example  .gitignore  README.md  explanation_template.md  findings.md  main.py  phase_5_explained.md  phase_6_explained.md  pyproject.toml
.github/agents/: copilot-instructions.md
.github/skills/interactive-implementation/: SKILL.md
backend/app/: main.py
backend/app/ai/: client.py  evaluator_runner.py  responder_runner.py
docs/: adventure_game_prototype_spec.md  image_generation.md  imp_scenario_independence.md  implementation_agnostics.md  implementation_agnostics_refined.md  implementation_image_gen.md  implementation_plan.md  phase_1_explained.md  phase_2_explained.md  phase_3_explained.md  phase_4_explained.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  main.js  render.js  state.js
frontend/tests/: dialogue-panel.test.js  render.test.js  scene-view.test.js  suggestions.test.js
scenarios/manor/: assets.json  characters.json  initial_state.json  locations.json  logic.json  prompt_context.json  story.json
scripts/: run_backend.ps1
tests/: conftest.py  test_api_smoke.py  test_character_responder.py  test_constraint_builder.py  test_evaluator_runner.py  test_game_integration.py  test_game_service.py  test_game_state.py  test_generate_assets.py  test_progress_evaluator.py  test_prompt_builder.py  test_scenario_loader.py  test_scenario_models.py  test_session_store.py  test_state_updater.py  test_validators.py
tools/: generate_assets.py  test_flux.py
tools/prompts/: backgrounds.py  portraits.py
(+33 files in other folders)
