[project]
name = "llm-storyline-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "openai",
    "rembg[gpu]>=2.0.75",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]
image-gen = [
    "torch>=2.3",
    "torchvision",
    "diffusers>=0.30",
    "transformers",
    "accelerate",
    "sentencepiece",
    "protobuf",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "image-gen" },
]
torchvision = [
    { index = "pytorch-cu124", extra = "image-gen" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
